# aio_pika_manager

./: README.md  pyproject.toml  pyprojects.toml  requirements.txt
aio_pika_manager/: __init__.py  aiopika.py  logger.py  manager.py  protocols.py
aio_pika_manager/mixins/: __init__.py  async_mixins.py  channel_mixins.py  connection_mixins.py  logger_mixins.py  queue_mixins.py  status_mixins.py
aio_pika_manager/utils/: __init__.py  logger.py
examples/: simple.py
